# cpp-cmake-docker-example

./: CMakeLists.txt  Dockerfile  README.md
include/: test.hpp
src/: main.cpp  test.cpp
